# new_LQR_control

./: .gitignore  CMakeLists.txt  README.md  build_packages.sh  package.xml  todo.txt
docs/: README.md  codebase-documentation.md  setup.md  system-overview.md  topics.md  vocabulary.md
docs/backups_configs/: backup_IMU_config_09_04_2025.xsa
launch/: test.xml
lqr/: CMakeLists.txt  package.xml
lqr/circuits/: track_output.csv
lqr/config/: params.yaml
lqr/include/lqr/: lqr.hpp
lqr/src/: lqr.cpp
rviz/: default.rviz  estimation.rviz  lqr.rviz  planning.rviz
scripts/: bag_record.sh  bag_record.yaml  clean_build.sh  dirty_build.sh  install.sh
src/: LQR_lateral_control.cpp  LQR_lateral_control_node.cpp
src/0_common/visualizers/gps_visualizer/: CMakeLists.txt
src/0_common/visualizers/gps_visualizer/src/: gps_visualizer.cpp
src/0_sensors/car_description/: CMakeLists.txt
src/0_sensors/car_description/launch/: car_description_launch.py
src/0_sensors/car_description/src/: car.urdf  car.urdf.xacro
src/0_sensors/car_description/src/urdf/: materials.urdf.xacro
src/0_sensors/drivers/driver_gps/: CMakeLists.txt
src/0_sensors/drivers/driver_gps/include/driver_gps/: driver_gps.hpp
src/0_sensors/drivers/driver_gps/include/serial_gps_interface/: serial_gps_interface.hpp
src/0_sensors/drivers/driver_gps/src/driver_gps/: driver_gps.cpp  driver_gps_node.cpp
src/0_sensors/drivers/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
src/1_sensors/car_description/: CMakeLists.txt  package.xml
src/1_sensors/car_description/launch/: car_description_launch.py  robot_state_publisher.launch
src/1_sensors/car_description/src/: carrellino.urdf  carrellino.urdf.xacro
src/1_sensors/car_description/src/urdf/: materials.urdf.xacro
src/1_sensors/drivers/driver_gps/: package.xml
src/1_sensors/drivers/driver_gps/config/: driver_gps.yaml
src/1_sensors/drivers/driver_gps/launch/: driver_gps_launch.py
src/1_sensors/drivers/driver_gps/src/driver_gps/: driver_gps.cpp
src/2_localization_mapping/fast_LIMO/config/: localizer.yaml
src/2_localization_mapping/fast_LIMO/src/: loop.cpp
src/2_localization_mapping/gps_imu_fusion/: CMakeLists.txt
src/2_localization_mapping/gps_imu_fusion/config/: gps_imu_fusion.yaml
src/2_localization_mapping/gps_imu_fusion/include/gps_imu_fusion/: gps_imu_fusion.hpp
src/2_localization_mapping/gps_imu_fusion/insFilterNonHolonomic/: CMakeLists.txt
src/2_localization_mapping/gps_imu_fusion/insFilterNonHolonomic/include/: InsFilterNonHolonomic.hpp
src/2_localization_mapping/gps_imu_fusion/insFilterNonHolonomic/src/: InsFilterNonHolonomic.cpp
src/2_localization_mapping/gps_imu_fusion/src/: gps_imu_fusion.cpp
src/2_localization_mapping/gps_to_odom/: CMakeLists.txt
src/2_localization_mapping/gps_to_odom/config/: params.yaml
src/2_localization_mapping/gps_to_odom/src/: gps_to_odom.cpp
src/2_localization_mapping/speed_estimator/src/: speed_estimator_node.cpp
src/2_localization_mapping/wheel_odom/: CMakeLists.txt
src/2_localization_mapping/wheel_odom/include/: KalmanFilter1D.h
src/2_localization_mapping/wheel_odom/src/: KalmanFilter1D.cpp  wheel_odom.cpp
src/3_estimation/gps_imu_fusion/: CMakeLists.txt  package.xml
src/3_estimation/gps_imu_fusion/config/: gps_imu_fusion.yaml
src/3_estimation/gps_imu_fusion/src/: gps_imu_fusion.cpp
src/3_estimation/gps_to_odom/: CMakeLists.txt  package.xml
src/3_estimation/gps_to_odom/include/: cpd.hpp  nanoflann.hpp
src/3_estimation/gps_to_odom/launch/: gps_to_odom.launch.py  navsat_transform.launch.py
src/3_estimation/gps_to_odom/src/: gps_to_odom.cpp  gps_to_odom_node.cpp
src/3_estimation/mmr_ekf_odometry/: CMakeLists.txt
src/3_estimation/speed_estimator/: CMakeLists.txt  package.xml
src/3_estimation/speed_estimator/config/: params.yaml
src/3_estimation/speed_estimator/launch/: speed_estimator.launch.py
src/3_estimation/wheel_odom/: package.xml
src/3_estimation/wheel_odom/config/: config.yaml
src/3_estimation/wheel_odom/launch/: wheel_odom.launch.py
src/3_estimation/wheel_odom/src/: wheel_odom.cpp
src/3_planning/autocross_planning_delunator/src/: main.cpp
src/3_planning/local_planner/: CMakeLists.txt  TODO.md  package.xml
src/3_planning/local_planner/config/: local_planner.yaml
src/3_planning/local_planner/include/local_planner/: acceleration.h  autocross.h  local_planner_node.h  skidpad.h
src/3_planning/local_planner/include/local_planner/modules/: Visualization.hpp  WayComputer.hpp
src/3_planning/local_planner/include/local_planner/structures/: Circle.hpp  Edge.hpp  Node.hpp  Point.hpp  Triangle.hpp  Vector.hpp  Way.hpp
src/3_planning/local_planner/include/local_planner/utils/: KDTree.hpp  Params.hpp
src/3_planning/local_planner/src/: acceleration.cpp  autocross.cpp  local_planner_node.cpp  skidpad.cpp
src/3_planning/local_planner/src/modules/: DelaunayTri.cpp  Visualization.cpp  WayComputer.cpp
src/3_planning/local_planner/src/structures/: Circle.cpp  Edge.cpp  Node.cpp  Point.cpp  Triangle.cpp  Vector.cpp  Way.cpp
src/3_planning/local_planner/src/utils/: KDTree.cpp  Params.cpp
src/4_planning/global_planner_provvisorio/: global_planner_di_simo.py  track_s.csv  varano_x_y_r_v.csv
src/4_planning/local_planner/: CMakeLists.txt  package.xml
src/4_planning/local_planner/config/: local_planner.yaml
src/4_planning/local_planner/launch/: local_planner.launch.py
src/4_planning/local_planner/src/: acceleration.cpp  autocross.cpp  local_planner_node.cpp  skidpad.cpp
src/5_control_actuation/: README.md
src/5_control_actuation/lqr/: CMakeLists.txt  package.xml
src/5_control_actuation/lqr/circuits/: track.csv  xy_int.csv
src/5_control_actuation/lqr/config/: params.yaml
src/5_control_actuation/lqr/include/: spline_path.hpp
src/5_control_actuation/lqr/launch/: lqr_node_launch.py
src/5_control_actuation/lqr/src/: lqr.cpp
src/_common/common_msgs/: CMakeLists.txt  package.xml
src/_common/visualizers/gps_visualizer/: package.xml
src/lqr/: README.md
src/lqr/circuits/: rettilineo.csv
src/lqr/src/: lqr.cpp
(+31 files in other folders)
