<?xml version="1.0"?>
<package format="3">
  <name>lqr</name>
  <version>0.1.0</version>
  <description>lqr algorithm</description>
  <maintainer email="filippogib@gmail.com">Filippo Gibertini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>boost</depend>
  
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>ackermann_msgs</buildtool_depend>
  <buildtool_depend>visualization_msgs</buildtool_depend>
  <buildtool_depend>common_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>common_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
