<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driver_gps</name>
  <version>0.0.0</version>
  <description>Driver for GPS communication</description>
  <maintainer email="259650@studenti.unimore.it">tommaso</maintainer>
  <license>TODO: License declaration</license>

  <depend>common_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
